--- a/notebooks/gears/testnotebook.ipynb
+++ b/notebooks/gears/testnotebook.ipynb
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
      "output_type": "stream",
      "text": [
       "Downloading...\n",
-      "100%|██████████| 9.46M/9.46M [00:00<00:00, 12.9MiB/s]\n"
+      "100%|██████████| 9.46M/9.46M [00:00<00:00, 11.1MiB/s]\n"
      ]
     },
     {
@@ -510,7 +510,7 @@
       "Saving data in ./data\n",
       "Starting new data processing for satija_IFNB_raw\n",
       "Getting DE Genes\n",
-      "Got DE genes for satija_ifnb_raw: 0.26 seconds\n"
+      "Got DE genes for satija_ifnb_raw: 0.08 seconds\n"
      ]
     },
     {
@@ -518,7 +518,7 @@
      "output_type": "stream",
      "text": [
       "Downloading...\n",
-      "100%|██████████| 559k/559k [00:00<00:00, 2.13MiB/s]\n"
+      "100%|██████████| 559k/559k [00:00<00:00, 2.14MiB/s]\n"
      ]
     },
     {
@@ -534,123 +534,84 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  9%|▉         | 1/11 [00:00<00:01,  7.35it/s]"
+      " 18%|█▊        | 2/11 [00:00<00:02,  3.95it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating 1379 cell graphs for ctrl: 0.11 seconds\n",
+      "Creating 1379 cell graphs for ctrl: 0.43 seconds\n",
       "Cell graph dataset for ctrl created, first element: Data(x=[5000, 1], y=[1, 5000], pert_idx=[1], de_idx=[20], pert='ctrl')\n",
-      "create_cell_graph_dataset call duration: ctrl: 0.13 seconds\n",
+      "create_cell_graph_dataset call duration: ctrl: 0.46 seconds\n",
       "Ctrl data shape (842, 5000), adata shape (842, 5000)\n",
-      "Creating 842 cell graphs for STAT5A+ctrl, Xs[0] shape (5000,), ys[0] shape (5000,)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 18%|█▊        | 2/11 [00:00<00:01,  7.95it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating 842 cell graphs for STAT5A+ctrl: 0.07 seconds\n",
+      "Creating 842 cell graphs for STAT5A+ctrl, Xs[0] shape (5000,), ys[0] shape (5000,)\n",
+      "Creating 842 cell graphs for STAT5A+ctrl: 0.06 seconds\n",
       "Cell graph dataset for STAT5A+ctrl created, first element: Data(x=[5000, 1], y=[1, 5000], pert_idx=[1], de_idx=[20], pert='STAT5A+ctrl')\n",
-      "create_cell_graph_dataset call duration: STAT5A+ctrl: 0.12 seconds\n",
+      "create_cell_graph_dataset call duration: STAT5A+ctrl: 0.10 seconds\n",
       "Ctrl data shape (688, 5000), adata shape (688, 5000)\n",
-      "Creating 688 cell graphs for RNF114+ctrl, Xs[0] shape (5000,), ys[0] shape (5000,)\n"
+      "Creating 688 cell graphs for RNF114+ctrl, Xs[0] shape (5000,), ys[0] shape (5000,)\n",
+      "Creating 688 cell graphs for RNF114+ctrl: 0.05 seconds\n",
+      "Cell graph dataset for RNF114+ctrl created, first element: Data(x=[5000, 1], y=[1, 5000], pert_idx=[1], de_idx=[20], pert='RNF114+ctrl')\n",
+      "create_cell_graph_dataset call duration: RNF114+ctrl: 0.08 seconds\n",
+      "TRIM22+ctrl\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 27%|██▋       | 3/11 [00:00<00:00,  8.71it/s]"
+      " 55%|█████▍    | 6/11 [00:00<00:00, 10.31it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating 688 cell graphs for RNF114+ctrl: 0.06 seconds\n",
-      "Cell graph dataset for RNF114+ctrl created, first element: Data(x=[5000, 1], y=[1, 5000], pert_idx=[1], de_idx=[20], pert='RNF114+ctrl')\n",
-      "create_cell_graph_dataset call duration: RNF114+ctrl: 0.10 seconds\n",
-      "TRIM22+ctrl\n",
       "Ctrl data shape (381, 5000), adata shape (381, 5000)\n",
       "Creating 381 cell graphs for TRIM22+ctrl, Xs[0] shape (5000,), ys[0] shape (5000,)\n",
-      "Creating 381 cell graphs for TRIM22+ctrl: 0.03 seconds\n",
+      "Creating 381 cell graphs for TRIM22+ctrl: 0.02 seconds\n",
       "Cell graph dataset for TRIM22+ctrl created, first element: Data(x=[5000, 1], y=[1, 5000], pert_idx=[1], de_idx=[20], pert='TRIM22+ctrl')\n",
-      "create_cell_graph_dataset call duration: TRIM22+ctrl: 0.06 seconds\n",
+      "create_cell_graph_dataset call duration: TRIM22+ctrl: 0.05 seconds\n",
       "HERC5+ctrl\n",
       "Ctrl data shape (468, 5000), adata shape (468, 5000)\n",
-      "Creating 468 cell graphs for HERC5+ctrl, Xs[0] shape (5000,), ys[0] shape (5000,)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 45%|████▌     | 5/11 [00:00<00:00, 11.86it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating 468 cell graphs for HERC5+ctrl: 0.04 seconds\n",
+      "Creating 468 cell graphs for HERC5+ctrl, Xs[0] shape (5000,), ys[0] shape (5000,)\n",
+      "Creating 468 cell graphs for HERC5+ctrl: 0.03 seconds\n",
       "Cell graph dataset for HERC5+ctrl created, first element: Data(x=[5000, 1], y=[1, 5000], pert_idx=[1], de_idx=[20], pert='HERC5+ctrl')\n",
       "create_cell_graph_dataset call duration: HERC5+ctrl: 0.06 seconds\n",
       "Ctrl data shape (417, 5000), adata shape (417, 5000)\n",
       "Creating 417 cell graphs for STAT2+ctrl, Xs[0] shape (5000,), ys[0] shape (5000,)\n",
       "Creating 417 cell graphs for STAT2+ctrl: 0.03 seconds\n",
       "Cell graph dataset for STAT2+ctrl created, first element: Data(x=[5000, 1], y=[1, 5000], pert_idx=[1], de_idx=[20], pert='STAT2+ctrl')\n",
-      "create_cell_graph_dataset call duration: STAT2+ctrl: 0.06 seconds\n"
+      "create_cell_graph_dataset call duration: STAT2+ctrl: 0.05 seconds\n",
+      "Ctrl data shape (737, 5000), adata shape (737, 5000)\n",
+      "Creating 737 cell graphs for TYK2+ctrl, Xs[0] shape (5000,), ys[0] shape (5000,)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 64%|██████▎   | 7/11 [00:00<00:00, 12.48it/s]"
+      " 73%|███████▎  | 8/11 [00:00<00:00, 10.46it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ctrl data shape (737, 5000), adata shape (737, 5000)\n",
-      "Creating 737 cell graphs for TYK2+ctrl, Xs[0] shape (5000,), ys[0] shape (5000,)\n",
       "Creating 737 cell graphs for TYK2+ctrl: 0.05 seconds\n",
       "Cell graph dataset for TYK2+ctrl created, first element: Data(x=[5000, 1], y=[1, 5000], pert_idx=[1], de_idx=[20], pert='TYK2+ctrl')\n",
-      "create_cell_graph_dataset call duration: TYK2+ctrl: 0.09 seconds\n",
+      "create_cell_graph_dataset call duration: TYK2+ctrl: 0.10 seconds\n",
       "Ctrl data shape (675, 5000), adata shape (675, 5000)\n",
       "Creating 675 cell graphs for RAP1GAP+ctrl, Xs[0] shape (5000,), ys[0] shape (5000,)\n",
-      "Creating 675 cell graphs for RAP1GAP+ctrl: 0.06 seconds\n",
+      "Creating 675 cell graphs for RAP1GAP+ctrl: 0.05 seconds\n",
       "Cell graph dataset for RAP1GAP+ctrl created, first element: Data(x=[5000, 1], y=[1, 5000], pert_idx=[1], de_idx=[20], pert='RAP1GAP+ctrl')\n",
       "create_cell_graph_dataset call duration: RAP1GAP+ctrl: 0.09 seconds\n",
       "Ctrl data shape (436, 5000), adata shape (436, 5000)\n",
-      "Creating 436 cell graphs for IRF7+ctrl, Xs[0] shape (5000,), ys[0] shape (5000,)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 82%|████████▏ | 9/11 [00:00<00:00, 12.67it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating 436 cell graphs for IRF7+ctrl: 0.03 seconds\n",
+      "Creating 436 cell graphs for IRF7+ctrl, Xs[0] shape (5000,), ys[0] shape (5000,)\n",
+      "Creating 436 cell graphs for IRF7+ctrl: 0.04 seconds\n",
       "Cell graph dataset for IRF7+ctrl created, first element: Data(x=[5000, 1], y=[1, 5000], pert_idx=[1], de_idx=[20], pert='IRF7+ctrl')\n",
-      "create_cell_graph_dataset call duration: IRF7+ctrl: 0.06 seconds\n",
+      "create_cell_graph_dataset call duration: IRF7+ctrl: 0.07 seconds\n",
       "Ctrl data shape (415, 5000), adata shape (415, 5000)\n",
       "Creating 415 cell graphs for NFE2L3+ctrl, Xs[0] shape (5000,), ys[0] shape (5000,)\n"
      ]
@@ -659,22 +620,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 11/11 [00:01<00:00,  9.96it/s]"
+      "100%|██████████| 11/11 [00:01<00:00,  9.34it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating 415 cell graphs for NFE2L3+ctrl: 0.24 seconds\n",
+      "Creating 415 cell graphs for NFE2L3+ctrl: 0.03 seconds\n",
       "Cell graph dataset for NFE2L3+ctrl created, first element: Data(x=[5000, 1], y=[1, 5000], pert_idx=[1], de_idx=[20], pert='NFE2L3+ctrl')\n",
-      "create_cell_graph_dataset call duration: NFE2L3+ctrl: 0.26 seconds\n",
+      "create_cell_graph_dataset call duration: NFE2L3+ctrl: 0.06 seconds\n",
       "MAP3K14+ctrl\n",
       "Ctrl data shape (407, 5000), adata shape (407, 5000)\n",
       "Creating 407 cell graphs for MAP3K14+ctrl, Xs[0] shape (5000,), ys[0] shape (5000,)\n",
       "Creating 407 cell graphs for MAP3K14+ctrl: 0.03 seconds\n",
       "Cell graph dataset for MAP3K14+ctrl created, first element: Data(x=[5000, 1], y=[1, 5000], pert_idx=[1], de_idx=[20], pert='MAP3K14+ctrl')\n",
-      "create_cell_graph_dataset call duration: MAP3K14+ctrl: 0.06 seconds\n",
+      "create_cell_graph_dataset call duration: MAP3K14+ctrl: 0.05 seconds\n",
       "Done!\n",
       "Saving new dataset pyg object at ./data_new/satija_ifnb_raw/data_pyg/cell_graphs.pkl\n"
      ]
@@ -683,7 +644,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
       "Creating new splits....\n",
       "Saving new splits at ./data_new/satija_ifnb_raw/splits/satija_ifnb_raw_no_test_1_0.75.pkl\n",
       "Done!\n",
@@ -718,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +686,7 @@
      "output_type": "stream",
      "text": [
       "Downloading...\n",
-      "100%|██████████| 60.7M/60.7M [00:26<00:00, 2.26MiB/s]\n",
+      "100%|██████████| 60.7M/60.7M [00:28<00:00, 2.10MiB/s]\n",
       "Extracting tar file...\n",
       "Done!\n"
      ]
@@ -746,7 +706,7 @@
        " 'direction_lambda': 'regularization term to balance direction loss and prediction loss, default 1'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +736,7 @@
        "DataBatch(x=[160000, 1], y=[32, 5000], pert_idx=[32], de_idx=[32], pert=[32], batch=[160000], ptr=[33])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,14 +747,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Start Training...\n"
+      "Start Training...\n",
+      "Epoch 1 Step 1 Train Loss: 0.2994\n"
      ]
     },
     {
@@ -809,12 +770,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1 Step 1 Train Loss: 0.3383\n",
-      "Epoch 1 Step 51 Train Loss: 0.3553\n",
-      "Epoch 1 Step 101 Train Loss: 0.3153\n",
-      "Epoch 1 Step 151 Train Loss: 0.2760\n",
-      "Epoch 1: Train Overall MSE: 0.0014 Validation Overall MSE: 0.0009. \n",
-      "Train Top 20 DE MSE: 0.0341 Validation Top 20 DE MSE: 0.0035. \n",
+      "Epoch 1 Step 51 Train Loss: 0.3393\n",
+      "Epoch 1 Step 101 Train Loss: 0.3529\n",
+      "Epoch 1 Step 151 Train Loss: 0.3464\n",
+      "Epoch 1: Train Overall MSE: 0.0013 Validation Overall MSE: 0.0005. \n",
+      "Train Top 20 DE MSE: 0.0299 Validation Top 20 DE MSE: 0.0026. \n",
       "Done!\n",
       "Done! No test dataloader detected.\n"
      ]
@@ -839,10 +799,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'RPL15': array([ 0.25589207, -0.0418413 ,  0.08747627, ..., -0.00059464,\n",
+       "         0.00094366, -0.00029467], dtype=float32)}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
   },
   {
    "cell_type": "code",
