added idx rep_map

--- a/notebooks/scot_loader.ipynb
+++ b/notebooks/scot_loader.ipynb
@@ -2,22 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-02 17:26:53,181 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/repogle_k562_essential_raw.yaml\n",
-      "2025-02-02 17:26:53,183 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/satija_IFNB_raw.yaml\n",
-      "2025-02-02 17:26:53,184 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/adamson_INCOMPLETE.yaml\n",
-      "2025-02-02 17:26:53,186 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/satija_IFNB_HVG.yaml\n",
-      "2025-02-02 17:26:53,187 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/kang.yaml\n",
-      "2025-02-02 17:26:53,188 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/essential_gene_knockouts_raw.yaml\n",
-      "2025-02-02 17:26:53,189 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/satija_IFNG_raw_INCOMPLETE.yaml\n",
-      "2025-02-02 17:26:53,191 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/satija_IFNG_raw.yaml\n",
-      "2025-02-02 17:26:53,192 - INFO - Loading training data at path: /orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/K562_essential_raw_singlecell_01.h5ad\n"
+      "2025-02-02 20:21:15,222 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/repogle_k562_essential_raw.yaml\n",
+      "2025-02-02 20:21:15,224 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/satija_IFNB_raw.yaml\n",
+      "2025-02-02 20:21:15,226 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/adamson_INCOMPLETE.yaml\n",
+      "2025-02-02 20:21:15,227 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/satija_IFNB_HVG.yaml\n",
+      "2025-02-02 20:21:15,228 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/kang.yaml\n",
+      "2025-02-02 20:21:15,230 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/essential_gene_knockouts_raw.yaml\n",
+      "2025-02-02 20:21:15,231 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/satija_IFNG_raw_INCOMPLETE.yaml\n",
+      "2025-02-02 20:21:15,232 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/satija_IFNG_raw.yaml\n",
+      "2025-02-02 20:21:15,233 - INFO - Loading training data at path: /orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/K562_essential_raw_singlecell_01.h5ad\n"
      ]
     },
     {
@@ -31,14 +31,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-02 17:26:56,545 - INFO - Loaded unpreprocessed data, # of data points: 310385, # of genes: 8563.\n",
-      "2025-02-02 17:26:56,546 - INFO - Preprocessing training data\n",
-      "2025-02-02 17:26:56,548 - INFO - Using identity features for perturbations\n",
-      "2025-02-02 17:26:56,669 - INFO - Removing observations with perturbations not in the dataset as a column\n",
-      "2025-02-02 17:26:56,858 - INFO - Removed 189 perturbations that were not in the dataset columns and 0 perturbations that did not have an embedding for a total of 189 perturbations removed out of an initial 2058 perturbations\n",
+      "2025-02-02 20:21:18,925 - INFO - Loaded unpreprocessed data, # of data points: 310385, # of genes: 8563.\n",
+      "2025-02-02 20:21:18,927 - INFO - Preprocessing training data\n",
+      "2025-02-02 20:21:18,928 - INFO - Using identity features for perturbations\n",
+      "2025-02-02 20:21:19,050 - INFO - Removing observations with perturbations not in the dataset as a column\n",
+      "2025-02-02 20:21:19,238 - INFO - Removed 189 perturbations that were not in the dataset columns and 0 perturbations that did not have an embedding for a total of 189 perturbations removed out of an initial 2058 perturbations\n",
       "/orcd/data/omarabu/001/njwfish/omnicell/notebooks/../omnicell/data/loader.py:178: ImplicitModificationWarning: Setting element `.obsm['embedding']` of view, initializing view as actual.\n",
       "  adata.obsm[\"embedding\"] = adata.X.toarray().astype('float32')\n",
-      "2025-02-02 17:27:33,837 - INFO - Doing OOD split\n"
+      "2025-02-02 20:21:56,299 - INFO - Doing OOD split\n"
      ]
     },
     {
@@ -122,6 +122,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get index of pert in adata.var_names\n",
+    "pert_list = adata.var_names.values.tolist()\n",
+    "pert_rep_map_idxs = {pert: pert_list.index(pert) for pert in adata.obs[PERT_KEY].unique() if pert != CONTROL_PERT}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -182,7 +193,7 @@
     "dset = PairedStratifiedDataset(\n",
     "    source_dict=npz['source'],\n",
     "    target_dict=npz['synthetic_counterfactuals'],\n",
-    "    pert_map=pert_rep_map\n",
+    "    pert_map=pert_rep_map_idxs\n",
     ")\n",
     "\n",
     "dl = torch.utils.data.DataLoader(\n",
@@ -2056,7 +2067,7 @@
     }
    ],
    "source": [
-    "for i, (ctrl, pert, pert_rep) in enumerate(iter(dl)):\n",
+    "for i, (ctrl, pert, pert_idx) in enumerate(iter(dl)):\n",
     "    print(i)\n",
     "    "
    ]
