archiving and folder structure

--- a/notebooks/debug_no_log1p.ipynb
+++ b/notebooks/debug_no_log1p.ipynb
@@ -9,15 +9,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-02 15:09:11,101 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/repogle_k562_essential_raw.yaml\n",
-      "2025-02-02 15:09:11,103 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/satija_IFNB_raw.yaml\n",
-      "2025-02-02 15:09:11,104 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/adamson_INCOMPLETE.yaml\n",
-      "2025-02-02 15:09:11,106 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/satija_IFNB_HVG.yaml\n",
-      "2025-02-02 15:09:11,107 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/kang.yaml\n",
-      "2025-02-02 15:09:11,108 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/essential_gene_knockouts_raw.yaml\n",
-      "2025-02-02 15:09:11,110 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/satija_IFNG_raw_INCOMPLETE.yaml\n",
-      "2025-02-02 15:09:11,111 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/satija_IFNG_raw.yaml\n",
-      "2025-02-02 15:09:11,112 - INFO - Loading training data at path: /orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/K562_essential_raw_singlecell_01.h5ad\n"
+      "2025-02-04 12:45:35,723 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/adamson_INCOMPLETE.yaml\n",
+      "2025-02-04 12:45:35,724 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/satija_IFNG_raw_INCOMPLETE.yaml\n",
+      "2025-02-04 12:45:35,726 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/satija_IFNB_raw.yaml\n",
+      "2025-02-04 12:45:35,727 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/satija_IFNB_HVG.yaml\n",
+      "2025-02-04 12:45:35,729 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/satija_IFNG_raw.yaml\n",
+      "2025-02-04 12:45:35,730 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/repogle_k562_essential_raw.yaml\n",
+      "2025-02-04 12:45:35,732 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/essential_gene_knockouts_raw.yaml\n",
+      "2025-02-04 12:45:35,733 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/kang.yaml\n",
+      "2025-02-04 12:45:35,735 - INFO - Loading training data at path: /orcd/data/omarabu/001/Omnicell_datasets/repogle_k562_essential_raw/K562_essential_raw_singlecell_01.h5ad\n"
      ]
     },
     {
@@ -31,14 +31,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-02 15:09:17,892 - INFO - Loaded unpreprocessed data, # of data points: 310385, # of genes: 8563.\n",
-      "2025-02-02 15:09:17,893 - INFO - Preprocessing training data\n",
-      "2025-02-02 15:09:17,894 - INFO - Using identity features for perturbations\n",
-      "2025-02-02 15:09:18,016 - INFO - Removing observations with perturbations not in the dataset as a column\n",
-      "2025-02-02 15:09:18,205 - INFO - Removed 189 perturbations that were not in the dataset columns and 0 perturbations that did not have an embedding for a total of 189 perturbations removed out of an initial 2058 perturbations\n",
-      "/orcd/data/omarabu/001/njwfish/omnicell/notebooks/../omnicell/data/loader.py:178: ImplicitModificationWarning: Setting element `.obsm['embedding']` of view, initializing view as actual.\n",
+      "2025-02-04 12:45:39,476 - INFO - Loaded unpreprocessed data, # of data points: 310385, # of genes: 8563.\n",
+      "2025-02-04 12:45:39,479 - INFO - Preprocessing training data\n",
+      "2025-02-04 12:45:39,481 - INFO - Using identity features for perturbations\n",
+      "2025-02-04 12:45:39,590 - INFO - Removing observations with perturbations not in the dataset as a column\n",
+      "2025-02-04 12:45:39,777 - INFO - Removed 189 perturbations that were not in the dataset columns and 0 perturbations that did not have an embedding for a total of 189 perturbations removed out of an initial 2058 perturbations\n",
+      "/orcd/data/omarabu/001/opitcho/omnicell/notebooks/../omnicell/data/loader.py:178: ImplicitModificationWarning: Setting element `.obsm['embedding']` of view, initializing view as actual.\n",
       "  adata.obsm[\"embedding\"] = adata.X.toarray().astype('float32')\n",
-      "2025-02-02 15:10:44,354 - INFO - Doing OOD split\n"
+      "2025-02-04 12:46:15,041 - INFO - Doing OOD split\n"
      ]
     },
     {
@@ -77,9 +77,9 @@
     "logger = logging.getLogger(__name__)\n",
     "\n",
     "# Configure paths\n",
-    "MODEL_CONFIG = ModelConfig.from_yaml(\"/orcd/data/omarabu/001/njwfish/omnicell/configs/models/linear_mean_model.yaml\")\n",
-    "ETL_CONFIG = ETLConfig(name = \"no_preprocessing\", log1p = False, drop_unmatched_perts = True)\n",
-    "EMBEDDING_CONFIG = EmbeddingConfig(pert_embedding='GenePT')\n",
+    "MODEL_CONFIG = ModelConfig.from_yaml(\"/orcd/data/omarabu/001/njwfish/omnicell/configs/models/test.yaml\")\n",
+    "ETL_CONFIG = ETLConfig(name = \"no_preprocessing\", log1p = False, count_norm=False, drop_unmatched_perts = True)\n",
+    "EMBEDDING_CONFIG = None\n",
     "\n",
     "SPLIT_CONFIG = DatasplitConfig.from_yaml(\"/orcd/data/omarabu/001/njwfish/omnicell/configs/splits/repogle_k562_essential_raw/random_splits/rs_accP_k562_ood_ss:ns_20_2_most_pert_0.1/split_0/split_config.yaml\")\n",
     "EVAL_CONFIG = EvalConfig.from_yaml(\"/orcd/data/omarabu/001/njwfish/omnicell/configs/splits/repogle_k562_essential_raw/random_splits/rs_accP_k562_ood_ss:ns_20_2_most_pert_0.1/split_0/eval_config.yaml\")  # Set this if you want to run evaluations\n",
@@ -124,14 +124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-02 15:12:01,714 - INFO - Mean model selected\n"
+      "2025-02-04 12:46:28,577 - INFO - Test model selected\n"
      ]
     }
    ],
@@ -141,40 +141,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/orcd/data/omarabu/001/njwfish/omnicell/notebooks/../omnicell/models/mean_models/model.py:72: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
-      "  pert_means = df.groupby('perturbation').mean()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.train(adata, None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-02 15:15:01,881 - INFO - Running evaluation\n",
-      "2025-02-02 15:15:01,882 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/repogle_k562_essential_raw.yaml\n",
-      "2025-02-02 15:15:01,884 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/satija_IFNB_raw.yaml\n",
-      "2025-02-02 15:15:01,885 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/adamson_INCOMPLETE.yaml\n",
-      "2025-02-02 15:15:01,887 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/satija_IFNB_HVG.yaml\n",
-      "2025-02-02 15:15:01,888 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/kang.yaml\n",
-      "2025-02-02 15:15:01,889 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/essential_gene_knockouts_raw.yaml\n",
-      "2025-02-02 15:15:01,891 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/satija_IFNG_raw_INCOMPLETE.yaml\n",
-      "2025-02-02 15:15:01,892 - INFO - Loading data catalogue from /orcd/data/omarabu/001/njwfish/omnicell/configs/catalogue/satija_IFNG_raw.yaml\n"
+      "2025-02-04 12:46:33,177 - INFO - Running evaluation\n",
+      "2025-02-04 12:46:33,179 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/adamson_INCOMPLETE.yaml\n",
+      "2025-02-04 12:46:33,181 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/satija_IFNG_raw_INCOMPLETE.yaml\n",
+      "2025-02-04 12:46:33,183 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/satija_IFNB_raw.yaml\n",
+      "2025-02-04 12:46:33,185 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/satija_IFNB_HVG.yaml\n",
+      "2025-02-04 12:46:33,187 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/satija_IFNG_raw.yaml\n",
+      "2025-02-04 12:46:33,189 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/repogle_k562_essential_raw.yaml\n",
+      "2025-02-04 12:46:33,191 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/essential_gene_knockouts_raw.yaml\n",
+      "2025-02-04 12:46:33,193 - INFO - Loading data catalogue from /orcd/data/omarabu/001/opitcho/omnicell/configs/catalogue/kang.yaml\n"
      ]
     }
    ],
@@ -200,16 +191,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/njwfish/miniconda3/envs/omnicell/lib/python3.9/site-packages/anndata/_core/anndata.py:1754: UserWarning: Observation names are not unique. To make them unique, call `.obs_names_make_unique`.\n",
-      "  utils.warn_names_duplicates(\"obs\")\n",
-      "/home/njwfish/miniconda3/envs/omnicell/lib/python3.9/site-packages/anndata/_core/anndata.py:1754: UserWarning: Observation names are not unique. To make them unique, call `.obs_names_make_unique`.\n",
+      "/orcd/data/omarabu/001/opitcho/miniforge3/envs/omnicell/lib/python3.9/site-packages/anndata/_core/anndata.py:1754: UserWarning: Observation names are not unique. To make them unique, call `.obs_names_make_unique`.\n",
+      "  utils.warn_names_duplicates(\"obs\")\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/orcd/data/omarabu/001/opitcho/miniforge3/envs/omnicell/lib/python3.9/site-packages/anndata/_core/anndata.py:1754: UserWarning: Observation names are not unique. To make them unique, call `.obs_names_make_unique`.\n",
       "  utils.warn_names_duplicates(\"obs\")\n"
      ]
     }
@@ -250,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +255,7 @@
      "output_type": "stream",
      "text": [
       "Cell: k562, Pert: RPL15\n",
-      "DEGs Overlaps: {'Overlap_in_top_2159_DEGs': 1120, 'Overlap_in_top_100_DEGs': 37, 'Overlap_in_top_50_DEGs': 12, 'Overlap_in_top_20_DEGs': 3, 'Jaccard': 0.3852769177846577}\n",
+      "DEGs Overlaps: {'Overlap_in_top_2159_DEGs': 2159, 'Overlap_in_top_100_DEGs': 100, 'Overlap_in_top_50_DEGs': 50, 'Overlap_in_top_20_DEGs': 20, 'Jaccard': 1.0}\n",
       "----------------------------------------------------------------------------------------------------\n"
      ]
     }
